# HighlightSmith

./: .editorconfig  .env.example  .gitignore  .prettierignore  Launch HighlightSmith.command  README.md  TESTER_GUIDE.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json
apps/desktopapp/: index.html  package.json  vite.config.ts
apps/desktopapp/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktopapp/src-tauri/capabilities/: default.json
apps/desktopapp/src-tauri/icons/: icon.icns
apps/desktopapp/src-tauri/icons/android/values/: ic_launcher_background.xml
apps/desktopapp/src-tauri/src/: lib.rs  main.rs
apps/mobileapp/: app.json  package.json
apps/webapp/: index.html  package.json  (+1 more)
assets/: icon.icns
docs/: ARCHITECTURE.md  ICON_SYSTEM.md  SUITE_PROTOCOL.md  V0_FOUNDATION.md  WINDOWS.md  analyzer-pipeline.md  api.md  architecture.md  desktopapp.md  mobileapp.md  profiles.md  repo-map.md  scoring-model.md  storage.md  verification.md  webapp.md
scripts/: _common.sh  app-build.sh  app-zip.sh  bootstrap.sh  build-service-bundle.mjs  check-env.sh  check-packages.sh  check-service-bundle.mjs  dev-analyzer.sh  dev-api.sh  dev-both.sh  dev-desktop.sh  dev-hs.sh  dev-mobile.sh  dev-pulse.sh  dev-web.sh  diagnostics.sh  doctor.sh  install-macos-launcher.sh  launch-hs.sh  release-check.sh  release-common.sh  release-unsigned.sh  smoke-studio-integration.ts  stop-hs.sh  verify-all.sh  verify-analyzer.sh  verify-api.sh  verify-desktop.sh  verify-mobile.sh  verify-web.sh  visual-smoke.mjs
(+85 files in other folders)
