[package]
name = "highlightsmith-desktop"
version = "0.1.0"
description = "Local-first highlight scouting shell for HighlightSmith"
authors = ["Jason Marshall"]
edition = "2021"

[lib]
name = "highlightsmith_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.6.0"
